--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <artifactId>gastrorate-service</artifactId>
+  <artifactId>places-service</artifactId>
   <build>
     <plugins>
       <plugin>
@@ -39,10 +39,10 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <description>Spring Boot backend service for GastroRate</description>
+  <description>Spring Boot backend service for Places app</description>
   <groupId>orozdigital</groupId>
   <modelVersion>4.0.0</modelVersion>
-  <name>gastrorate-service</name>
+  <name>places-service</name>
   <parent>
     <artifactId>spring-boot-starter-parent</artifactId>
     <groupId>org.springframework.boot</groupId>
