--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,13 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.mongodb</groupId>
-      <artifactId>mongodb-driver-sync</artifactId>
-      <version>4.11.1</version>
-    </dependency>
-    <dependency>
-      <artifactId>spring-boot-starter-data-mongodb</artifactId>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.integration</groupId>
+      <artifactId>spring-integration-mongodb</artifactId>
     </dependency>
     <dependency>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -42,12 +42,6 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <groupId>org.springframework.boot</groupId>
       <scope>test</scope>
-    </dependency>
-
-    <!--JPA support-->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
     <!-- QUERY-DSL-->
@@ -82,6 +76,7 @@
   </parent>
   <properties>
     <java.version>17</java.version>
+    <querydsl.version>5.0.0</querydsl.version>
   </properties>
 
   <version>0.0.1-SNAPSHOT</version>
